# Mini-Compiler

my-mini-compiler/: CMakeLists.txt  parser.c
my-mini-compiler/phase1-w25/include/: tokens.h
my-mini-compiler/phase1-w25/src/lexer/: lexer.c
my-mini-compiler/phase1-w25/test/: input_invalid.txt  input_valid.txt
my-mini-compiler/phase2-w25/include/: parser.h  tokens.h
my-mini-compiler/phase2-w25/src/lexer/: lexer.c
my-mini-compiler/phase2-w25/src/parser/: parser.c
my-mini-compiler/phase2-w25/test/: input_invalid.txt  input_valid.txt
my-mini-compiler/phase3-w25/include/: parser.h  semantic.h  tokens.h
my-mini-compiler/phase3-w25/src/lexer/: lexer.c
my-mini-compiler/phase3-w25/src/parser/: parser.c
my-mini-compiler/phase3-w25/src/semantic/: semantic.c
my-mini-compiler/phase3-w25/test/: input_invalid.txt  input_valid.txt
